# kernel_linux_common_modules

./: BUILD.gn  LICENSE  OAT.xml  README.OpenSource  README.en.md  README.md
code_sign/: Kconfig  Makefile  apply_code_sign.sh  code_sign_elf.c  code_sign_elf.h  code_sign_ext.c  code_sign_ext.h  code_sign_ioctl.c  code_sign_ioctl.h  code_sign_log.h  code_sign_misc.c  verify_cert_chain.c  verify_cert_chain.h
container_escape_detection/: Kconfig  Makefile  apply_ced.sh
container_escape_detection/core/: ced_detection.c  ced_module.c  ced_permission.c
container_escape_detection/include/: ced_detection.h  ced_detection_points.h  ced_log.h  ced_permission.h
dec/: Kconfig  Makefile  apply_dec.sh  dec_common.h  dec_constraint_tree.c  dec_constraint_tree.h  dec_kernel_interface.c  dec_kernel_interface.h  dec_log.h  dec_misc.c  dec_misc.h  dec_path_tree.c  dec_path_tree.h  dec_security_hook.c  dec_security_hook.h  dec_utils.c  dec_utils.h  sysctl.c  sysctl.h
dec/examples/: CMakeLists.txt  dec_basic_test.sh  dec_test.cpp  dec_test.h  dectool.cpp  setproc_common.h  token_setproc.cpp  token_setproc.h
memory_security/: Kconfig  Makefile  README_zh.md  apply_hideaddr.sh  hideaddr.c  module.c
memory_security/include/: hideaddr.h  jit_memory.h  jit_memory_log.h  jit_memory_module.h  jit_process.h  jit_space_list.h
memory_security/src/: hideaddr.c  jit_memory.c  jit_memory_module.c  jit_process.c  jit_space_list.c
module_sample/: BUILD.gn  ko_sample.c  sample_fun.c
newip/: README.OpenSource  README_zh.md  apply_newip.sh
newip/examples/: Makefile  check_nip_enable.c  get_af_ninet.c  newip_route.h  nip.h  nip_addr.c  nip_addr_cfg_demo.c  nip_lib.c  nip_lib.h  nip_route.c  nip_route_cfg_demo.c  nip_tcp_client_demo.c  nip_tcp_server_demo.c  nip_uapi.h  nip_udp_client_demo.c  nip_udp_server_demo.c
newip/tools/: wireshark_cfg_for_newip.lua
ohoe_headers/: apply_ohoe_headers.sh
pac/: Makefile  README_zh.md  apply_pac.sh
pac/config/: config.txt
pac/include/: asm_pointer_auth_context.h  asm_pointer_auth_key.h  pointer_auth_common.h  (+1 more)
qos_auth/: README_zh.md  apply_qos_auth.sh
tzdriver/: Makefile  README.md  README_zh.md  apply_tzdriver.sh
ucollection/: Kconfig  Makefile  README_zh.md  apply_ucollection.sh  ucollection_process_cpu.c  ucollection_process_cpu.h  unified_collection_data.h  unified_collection_driver.c
xpm/: Kconfig  Makefile  README_zh.md  apply_xpm.sh
(+110 files in other folders)
