# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/kernel/ohos_kernel_build.gni")

ohos_build_ko("ko_sample") {
  sources = [ "//kernel/linux/common_modules/module_sample/ko_sample.c",
              "//kernel/linux/common_modules/module_sample/sample_fun.c" ]
  target_ko_name = "kosample"
  device_name = device_name
  device_arch = "arm64"
}
