// SPDX-License-Identifier: GPL-2.0
/*
 * Copyright (c) 2023 Huawei Device Co., Ltd.
 *
 * ko build sample
 *
 * Author: z-jax <zhujiaxin@huawei.com>
 *
 * Data: 2023-11-25
 */

import("//build/templates/kernel/ohos_kernel_build.gni")

ohos_build_ko("ko_sample") {
  sources = [
    "ko_sample.c",
    "sample_fun.c",
  ]
  target_ko_name = "kosample"
  device_name = device_name
  device_arch = "arm64"
}
